<resources>
    <string name="app_name">Network Information</string>
    <string name="requestIP">Find out IP</string>
    <string name="IPLabel">Your IP:</string>
    <string name="detailsButton">More</string>
    <string name="noIP">Unknown</string>
    <string name="setName">Set name</string>
    <string name="startTest">Start speed test</string>
    <string name="editHint">Name current IP</string>
    <string name="emptyCoordinatesLabel">Coordinates are missing</string>
    <string name="coordinatesLabel">Latitude: %f, longitude: %f degrees</string>
    <string name="google_maps_key">AIzaSyBpfmGnN8xI2lFqsnPVg7vyGX0ywrV8CoE</string>
    <string name="googlePlayUnavailable">Google Play Store is not available</string>
    <string name="markerName">IP source</string>
    <string name="rateLabel">Data transfer rate:</string>
    <string name="rateLabelSet">%s MBps</string>
    <string name="share">Share</string>
</resources>
